17 August 2018: Ralph
	- Fix classification for QTYPE=CNAME queries when QNAME minimisation is
 	  enabled.

17 August 2018: Wouter
	- Set libunbound to increase current, because the libunbound change
	  to the event callback function signature.  That needs programs,
	  that use it, to recompile against the new header definition.

16 August 2018: Wouter
	- Fix warning on compile without threads.
	- Fix contrib/fastrpz.patch.

15 August 2018: Wouter
	- Fix segfault in auth-zone read and reorder of RRSIGs.

14 August 2018: Wouter
	- Fix that printout of error for cycle targets is a verbosity 4
	  printout and does not wrongly print it is a memory error.
	- Upgraded crosscompile script to include libunbound DLL in the
	  zipfile.

10 August 2018: Wouter
	- Fix #4144: dns64 module caches wrong (negative) information.

9 August 2018: Wouter
	- unbound-checkconf checks if modules exist and prints if they are
	  not compiled in the name of the wrong module.
	- document --enable-subnet in doc/README.
	- Patch for stub-no-cache and forward-no-cache options that disable
	  caching for the contents of that stub or forward, for when you
	  want immediate changes visible, from Bjoern A. Zeeb.

7 August 2018: Ralph
	- Make capsforid fallback QNAME minimisation aware.

7 August 2018: Wouter
	- Fix #4142: unbound.service.in: improvements and fixes.
	  Add unit dependency ordering (based on systemd-resolved).
	  Add 'CAP_SYS_RESOURCE' to 'CapabilityBoundingSet' (fixes warnings
	  about missing privileges during startup). Add 'AF_INET6' to
	  'RestrictAddressFamilies' (without it IPV6 can't work). From
	  Guido Shanahan.
	- Patch to implement tcp-connection-limit from Jim Hague (Sinodun).
	  This limits the number of simultaneous TCP client connections
	  from a nominated netblock.
	- make depend, yacc, lex, doc, headers.  And log the limit exceeded
	  message only on high verbosity, so as to not spam the logs when
	  it is busy.

6 August 2018: Wouter