@@ -1155,6 +1155,21 @@ void mesh_query_done(struct mesh_state* mstate)
 	struct mesh_cb* c;
 	struct reply_info* rep = (mstate->s.return_msg?
 		mstate->s.return_msg->rep:NULL);
+	if(mstate->s.return_rcode == LDNS_RCODE_SERVFAIL ||
+		(rep && FLAGS_GET_RCODE(rep->flags) == LDNS_RCODE_SERVFAIL)) {
+		char* err = errinf_to_str(&mstate->s);
+		if(err) {
+			char nm[255+1];
+			char* tp = sldns_wire2str_type(mstate->s.qinfo.qtype);
+			char* cl = sldns_wire2str_class(mstate->s.qinfo.qclass);
+			dname_str(mstate->s.qinfo.qname, nm);
+			log_err("query %s %s %s SERVFAIL with reason: %s",
+				nm, tp?tp:"t", cl?cl:"c", err);
+			free(err);
+			free(tp);
+			free(cl);
+		}
+	}
 	for(r = mstate->reply_list; r; r = r->next) {
 		/* if a response-ip address block has been stored the
 		 *  information should be logged for each client. */
