@@ -6,6 +6,7 @@
 	- Set libunbound to increase current, because the libunbound change
 	  to the event callback function signature.  That needs programs,
 	  that use it, to recompile against the new header definition.
+	- print servfail info to log as error.
 
 16 August 2018: Wouter
 	- Fix warning on compile without threads.
